--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.2",
+    "formik": "^2.2.9",
     "prop-type": "^0.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3"
+    "uniqid": "^5.4.0",
+    "web-vitals": "^2.1.3",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
